WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
176163
[Win] Crash under WorkQueue::performWorkOnRegisteredWorkThread in layout tests.
https://bugs.webkit.org/show_bug.cgi?id=176163
Summary
[Win] Crash under WorkQueue::performWorkOnRegisteredWorkThread in layout tests.
Per Arne Vollan
Reported
2017-08-31 08:07:00 PDT
My previous attempt at fixing this crash in <
http://trac.webkit.org/changeset/221323
> was incorrect, since it is still crashing on the bot(s). The current theory of why this is failing is that the WorkQueue object deletes itself in the middle of the performWorkOnRegisteredWorkThread method when calling deref().
Attachments
Patch
(3.44 KB, patch)
2017-08-31 08:15 PDT
,
Per Arne Vollan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Per Arne Vollan
Comment 1
2017-08-31 08:15:40 PDT
Created
attachment 319462
[details]
Patch
Per Arne Vollan
Comment 2
2017-08-31 10:47:20 PDT
Comment on
attachment 319462
[details]
Patch Thanks for reviewing!
WebKit Commit Bot
Comment 3
2017-08-31 11:15:51 PDT
Comment on
attachment 319462
[details]
Patch Clearing flags on attachment: 319462 Committed
r221425
: <
http://trac.webkit.org/changeset/221425
>
WebKit Commit Bot
Comment 4
2017-08-31 11:15:53 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5
2017-09-27 12:47:10 PDT
<
rdar://problem/34693984
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug